apps/clubs/veloom/wordpress/prod/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: veloom-staging-ingress
spec:
  virtualhost:
    fqdn: evovelo.prodv2.cedille.club
    tls:
      secretName: veloom-staging-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: veloom-svc
          port: 80
