apps/clubs/veloom/wordpress/prod/ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: evovelo
spec:
  virtualhost:
    fqdn: evovelo.etsmtl.ca
    tls:
      secretName: veloom-prod-tls
    corsPolicy:
      allowOrigin:
        - "https://evovelo.etsmtl.ca"
        - "https://evovelo.cedille.club"
      allowMethods:
        - "*"
      allowHeaders:
        - "*"
  routes:
    - conditions:
        - prefix: /
      services:
        - name: veloom-svc
          port: 80
      requestHeadersPolicy:
        set:
          - name: X-Forwarded-Proto
            value: https
